# wordpress-recommender

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build_publish.yml
src/wordpress_recommender/: README.md  configs.py  content_downloader.py  index_generator.py  main.py  query_index.py  utils.py
src/wordpress_recommender/common/: embedding_utils.py
src/wordpress_recommender/content_extractors/: sitemap_content_downloader.py  sitemap_content_extractor.py
src/wordpress_recommender/index_creators/: chroma_index_creator.py
src/wordpress_recommender/retrievers/: chroma_index_retriever.py
tests/: .env.template  conftest.py  test_main.py
