[tool.poetry]
name = "wordpress-recommender"
version = "0.1.3"
description = "An application to recommend articles from a Wordpress blog based on user's query using semantic search"
authors = ["Anurag Chatterjee"]
readme = "src/wordpress_recommender/README.md"
packages = [{include = "wordpress_recommender", from="src"}]

[tool.poetry.scripts]
wordpress-recommender = "wordpress_recommender.main:app"

[tool.poetry.dependencies]
python = "^3.9"
sentence-transformers = ">=2.2.2"
typer = {extras = ["all"], version = ">=0.9.0"}
tiktoken = ">=0.4.0"
langchain = ">=0.0.262"
beautifulsoup4 = ">=4.12.2"
pandas = ">=2.1.0"
chromadb = ">=0.4.13"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
ruff = "0.0.269"
ipykernel = "6.23.3"
nbformat = ">= 4.2.0"
pytest = ">=7.4.3"

[tool.black]
target-version = ["py39"]
line-length = 100
include = '\.pyi?$'
exclude = '''
    \.git |
    \.__pycache__|
    \.hg|
    \.mypy_cache|
    \.tox|
    \.venv|
    _build|
    buck-out|
    build|
    dist
    '''

[tool.ruff]
line-length = 100
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B904",
    "B006",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
